@@ -3,9 +3,15 @@ Changes in version 0.7-11 (15-07-2012, Rev. 1377)
 
 - GUI shows R code to reproduce results in R.
 
+- The graph area has now a pop-up menu on right click.
+
 - Fixed a bug introduced in the last versions:
   In the GUI the alpha-Field was always set back to 0.05 regardless 
   of what the user entered.
+
+- For some graphs the Simes-procedure produced errors when
+  pvalues were exactly 0 (while not relevant for practical use
+  this was frustrating when experimenting with graphs).
 
 - Stated at more places what parametric tests do and 
   which prerequisites must be met.
@@ -48,6 +54,9 @@ Changes in version 0.7-11 (15-07-2012, Rev. 1377)
 - Epsilon edges can be (optionally) shown as dashed lines.
 
 - New example graph from Ferber et al. 2011.
+
+- Fixed an error that occured if a graph was exported as PNG file
+  and was really close to the border of the visible area. 
 
 
 Changes in version 0.7-10 (15-06-2012, Rev. 1291)
